--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       href="./src/assets/favicon.ico"
       type="image/x-icon"
     />
-    <link rel="stylesheet" href="./src/index.css">
+    <link rel="stylesheet" href="./src/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="src\scripts\script.js"></script>
     <title>Clio</title>
