--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     />
     <link rel="stylesheet" href="./src/styles/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="./src/scripts/script.js></script>
+    <script src="./src/scripts/script.js"></script>
     <title>Clio</title>
   </head>
   <body style="background-color: #F7FFF7">
