--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     />
     <link rel="stylesheet" href="./src/styles/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="./src/scripts/script.js"></script>
     <title>Clio</title>
   </head>
   <body style="background-color: #F7FFF7">
@@ -23,6 +22,7 @@
       </div>
     </div>
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <script type="module" src="./src/main.jsx"></script>
+    <script src="./src/scripts/script.js"></script>
   </body>
 </html>
