Correção de bugs

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Clio</title>
   </head>
-  <body style="background-color: #F7FFF7">
+  <body id="body" style="background-color: #F7FFF7">
     <div id="preloader">
       <div class="inner">
         <div class="balls">
