Correção de bugs

--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@
     </div>
     <div id="root"></div>
     <script type="module" src="./src/main.jsx"></script>
-    <script src="./src/scripts/script.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
