--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </div>
   <div id="root"></div>
   <script type="module" src="./src/main.jsx"></script>
-  <script src="script.js"></script>
+  <script src="./script.js"></script>
 </body>
 
 </html>
