--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </div>
   </div>
   <div id="root"></div>
-  <script src="./script.js"></script>
+  <script src="./src/scripts/script.js"></script>
   <script type="module" src="./src/main.jsx"></script>
 </body>
 
