Correção de bugs

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="pt">
 
 <head>
+  <script type="module" src="./src/scripts/script.jsx"></script>
   <meta charset="UTF-8" />
   <link rel="shortcut icon" href="./src/assets/favicon.ico" type="image/x-icon" />
   <link rel="stylesheet" href="./src/styles/style.css">
@@ -20,7 +21,6 @@
     </div>
   </div>
   <div id="root"></div>
-  <script src="./src/scripts/script.js"></script>
   <script type="module" src="./src/main.jsx"></script>
 </body>
 
