Feature: removed info and meta tags
- Removed adcional information from "sobre";

- Added meta tags in "index.html";

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   <link rel="stylesheet" href="./src/styles/style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Clio</title>
+  <meta name="author" content="Clio">
+  <meta name="keywords" content="livro, biblioteca, acervo, livros nacionais ">
+  <meta name="description" content="A Clio é um acervo digital de livros nacionais, onde está disponibilizado uma biblioteca em que os usuários poderão encontrar a sinopse, as informações gerais e possíveis locais de compra de determinada edição.">
 </head>
 
 <body id="body" style="background-color: #F7FFF7">
