:tada: Initial commit

--- a/index.html
+++ b/index.html
@@ -1,30 +1,38 @@
 <!DOCTYPE html>
 <html lang="pt">
+  <head>
+    <script type="module" src="./src/scripts/script.jsx"></script>
+    <meta charset="UTF-8" />
+    <link
+      rel="shortcut icon"
+      href="./src/assets/favicon.ico"
+      type="image/x-icon"
+    />
+    <link rel="stylesheet" href="./src/styles/style.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Clio</title>
+    <meta name="author" content="Clio" />
+    <meta
+      name="keywords"
+      content="livro, biblioteca, acervo, livros nacionais "
+    />
+    <meta
+      name="description"
+      content="A Clio é um acervo digital de livros nacionais, onde está disponibilizado uma biblioteca em que os usuários poderão encontrar a sinopse, as informações gerais e possíveis locais de compra de determinada edição."
+    />
+  </head>
 
-<head>
-  <script type="module" src="./src/scripts/script.jsx"></script>
-  <meta charset="UTF-8" />
-  <link rel="shortcut icon" href="./src/assets/favicon.ico" type="image/x-icon" />
-  <link rel="stylesheet" href="./src/styles/style.css">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Clio</title>
-  <meta name="author" content="Clio">
-  <meta name="keywords" content="livro, biblioteca, acervo, livros nacionais ">
-  <meta name="description" content="A Clio é um acervo digital de livros nacionais, onde está disponibilizado uma biblioteca em que os usuários poderão encontrar a sinopse, as informações gerais e possíveis locais de compra de determinada edição.">
-</head>
-
-<body id="body" style="background-color: #F7FFF7">
-  <div id="preloader">
-    <div class="inner">
-      <div class="balls">
-        <div></div>
-        <div></div>
-        <div></div>
+  <body id="body" style="background-color: #f7fff7">
+    <div id="preloader">
+      <div class="inner">
+        <div class="balls">
+          <div></div>
+          <div></div>
+          <div></div>
+        </div>
       </div>
     </div>
-  </div>
-  <div id="root"></div>
-  <script type="module" src="./src/main.jsx"></script>
-</body>
-
+    <div id="root"></div>
+    <script type="module" src="./src/main.jsx"></script>
+  </body>
 </html>
